[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name            = "rbtreetjl"
version         = "0.1.0"
description     = "Short one-liner"
readme          = "README.md"
license         = {text = "MIT"}
authors         = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.9"
dependencies    = ["numpy>=1.26"]

[project.urls]
"Source" = "https://github.com/you/mypkg"
"Docs"   = "https://your-site.io/mypkg"
